Set default JAVA_OPTS